--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -94,6 +94,13 @@
               max-width: 400px;
             }
           }
+          &>.message-item.right{
+            flex-direction: row-reverse;
+            &>.word{
+              margin: 0 5px;
+              background-color: green;
+            }
+          }
         }
         &>.bar{
           width: 100%;
