--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -24,6 +24,9 @@
         height: 100%;
         width: 250px;
         border-right: 1px solid #eaeaea;
+        &>.user-item.active{
+          background-color: #f5f5f5;
+        }
         &>.user-item{
           width: 100%;
           padding: 10px;
@@ -68,7 +71,7 @@
         display: flex;
         flex-direction: column;
         &>.message-list{
-          background-color: #fafafa;
+          background-color: #f5f5f5;
           width: 100%;
           height: 500px;
           border-bottom: 1px solid #eaeaea;
@@ -77,12 +80,14 @@
           &>.message-item{
             width: 100%;
             display: flex;
+            align-items: center;
             &:nth-child(n + 2) {
               margin-top: 15px;
             }
             &>.avatar{
               width: 30px;
               height: 30px;
+              align-self: flex-start;
             }
             &>.word{
               margin: 0 5px;
@@ -92,6 +97,17 @@
               border-radius: 3px;
               padding: 5px;
               max-width: 400px;
+            }
+            &>.error {
+              height: 30px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              color: #ff4d4f;
+              font-size: 20px;
+              &:hover{
+                cursor: pointer;
+              }
             }
           }
           &>.message-item.right{
@@ -104,14 +120,14 @@
         }
         &>.bar{
           width: 100%;
-          height: 40px;
+          height: 50px;
           padding: 0 10px;
           display: flex;
           align-items: center;
         }
         &>.input{
-          width: 100%;
           flex: 1;
+          padding: 0 5px;
         }
       }
     }
