--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -14,6 +14,8 @@
       width: 100%;
       height: 60px;
       border-bottom: 1px solid #eaeaea;
+      display: flex;
+      padding: 0 10px;
     }
     &>.body{
       flex: 1;
