--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -24,7 +24,7 @@
       &>.user-list{
         flex-shrink: 0;
         height: 100%;
-        width: 250px;
+        width: 300px;
         border-right: 1px solid #eaeaea;
         &>.user-item.active{
           background-color: #f5f5f5;
@@ -56,9 +56,15 @@
                 flex: 1;
                 font-size: 18px;
               }
+              &>.name.online{
+                color: #409EFF;
+              }
+              &>.name.offline{
+                color: #909399
+              }
               &>.time{
                 text-align: right;
-                width: 60px;
+                width: 100px;
                 color: #888888;
               }
             }
