--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -1,154 +1,31 @@
-.chat-container{
-  width: 100%;
+.chat_container {
   display: flex;
   align-items: center;
   justify-content: center;
-  &>.chat{
-    width: 1080px;
-    height: 800px;
-    background-color: #FFF;
+  width: 100%;
+  & > .chat {
     display: flex;
     flex-direction: column;
-    &>.title{
+    width: 1080px;
+    height: 800px;
+    background-color: #fff;
+    & > .title {
+      display: flex;
       flex-shrink: 0;
+      justify-content: space-between;
       width: 100%;
       height: 60px;
-      border-bottom: 1px solid #eaeaea;
-      display: flex;
       padding: 0 10px;
+      border-bottom: 1px solid #eaeaea;
     }
-    &>.body{
+    & > .body {
+      display: flex;
       flex: 1;
       width: 100%;
-      display: flex;
-      &>.user-list{
-        flex-shrink: 0;
-        height: 100%;
-        width: 300px;
-        border-right: 1px solid #eaeaea;
-        &>.user-item.active{
-          background-color: #f5f5f5;
-        }
-        &>.user-item{
-          width: 100%;
-          padding: 10px;
-          height: 70px;
-          display: flex;
-          &>.avatar{
-            width: 50px;
-            height: 50px;
-            flex-shrink: 0;
-          }
-          &>.info{
-            flex: 1;
-            overflow: hidden;
-            margin-left: 10px;
-            div{
-              overflow:hidden;
-              white-space: nowrap;
-              text-overflow: ellipsis;
-            }
-            &>.first{
-              width: 100%;
-              display: flex;
-              align-items: center;
-              &>.name{
-                flex: 1;
-                font-size: 18px;
-              }
-              &>.name.online{
-                color: #409EFF;
-              }
-              &>.name.offline{
-                color: #909399
-              }
-              &>.time{
-                text-align: right;
-                width: 100px;
-                color: #888888;
-              }
-            }
-            &>.last{
-              color: #888888;
-              display: flex;
-              justify-content: space-between;
-              overflow:hidden;
-              white-space: nowrap;
-              text-overflow: ellipsis;
-              &>.message{
-                flex: 1;
-              }
-              &>.action{
-                text-align: right;
-                width: 50px;
-              }
-            }
-          }
-        }
-      }
-      &>.message{
-        flex: 1;
+      & > .message {
         display: flex;
+        flex: 1;
         flex-direction: column;
-        &>.message-list{
-          background-color: #f5f5f5;
-          width: 100%;
-          height: 500px;
-          border-bottom: 1px solid #eaeaea;
-          padding: 10px;
-          overflow: auto;
-          &>.message-item{
-            width: 100%;
-            display: flex;
-            align-items: center;
-            &:nth-child(n + 2) {
-              margin-top: 15px;
-            }
-            &>.avatar{
-              width: 30px;
-              height: 30px;
-              align-self: flex-start;
-            }
-            &>.word{
-              margin: 0 5px;
-              background-color: #FFF;
-              line-height: 20px;
-              font-size: 16px;
-              border-radius: 3px;
-              padding: 5px;
-              max-width: 400px;
-            }
-            &>.error {
-              height: 30px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              color: #ff4d4f;
-              font-size: 20px;
-              &:hover{
-                cursor: pointer;
-              }
-            }
-          }
-          &>.message-item.right{
-            flex-direction: row-reverse;
-            &>.word{
-              margin: 0 5px;
-              background-color: green;
-            }
-          }
-        }
-        &>.bar{
-          width: 100%;
-          height: 50px;
-          padding: 0 10px;
-          display: flex;
-          align-items: center;
-        }
-        &>.input{
-          flex: 1;
-          padding: 0 5px;
-        }
       }
     }
   }
