--- a/src/global.less
+++ b/src/global.less
@@ -45,7 +45,11 @@ ol {
     }
   }
 }
-
+.pointer {
+  &:hover {
+    cursor: pointer;
+  }
+}
 // 兼容IE11
 @media screen and(-ms-high-contrast: active), (-ms-high-contrast: none) {
   body .ant-design-pro > .ant-layout {
