--- a/src/global.less
+++ b/src/global.less
@@ -56,3 +56,12 @@ ol {
     min-height: 100vh;
   }
 }
+.action-icon {
+  font-size: 25px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+.ant-upload {
+  line-height: 1 !important;
+}
