--- a/src/pages/chat/components/InputArea/components/Action/index.less
+++ b/src/pages/chat/components/InputArea/components/Action/index.less
@@ -4,4 +4,10 @@
   width: 100%;
   height: 50px;
   padding: 0 10px;
+  line-height: 1;
+  & > * {
+    &:nth-child(n + 2) {
+      margin-left: 10px;
+    }
+  }
 }
