--- a/src/pages/chat/components/MessageList/components/Item/index.less
+++ b/src/pages/chat/components/MessageList/components/Item/index.less
@@ -4,10 +4,12 @@
   width: 100%;
   &[data-right='true'] {
     flex-direction: row-reverse;
-    & > .word {
+    & > .content {
       margin: 0 5px;
       color: #0f170a;
-      background-color: #95ec69;
+      &[data-msg-type='text'] {
+        background-color: #95ec69;
+      }
     }
   }
   &:nth-child(n + 2) {
@@ -18,15 +20,17 @@
     width: 30px;
     height: 30px;
   }
-  & > .word {
+  & > .content {
     max-width: 400px;
     margin: 0 5px;
     padding: 5px;
     font-size: 16px;
     line-height: 20px;
     word-break: break-all;
-    background-color: #fff;
     border-radius: 3px;
+    &[data-msg-type='text'] {
+      background-color: #fff;
+    }
   }
   & > .error {
     display: flex;
