--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -26,6 +26,20 @@
         display: flex;
         flex: 1;
         flex-direction: column;
+        & > .input {
+          position: relative;
+          flex: 1;
+          & > .shadow {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            &:hover {
+              cursor: not-allowed;
+            }
+          }
+        }
       }
     }
   }
