--- a/src/pages/chat/components/Menu/index.less
+++ b/src/pages/chat/components/Menu/index.less
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   height: 100%;
-  .avatar {
+  .menu {
+    display: flex;
+    align-items: center;
     &:hover {
       cursor: pointer;
     }
