--- a/src/pages/chat/components/Input/index.less
+++ b/src/pages/chat/components/Input/index.less
@@ -1,15 +1,5 @@
 .input {
   position: relative;
-  flex: 1;
-  & > .shadow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    &:hover {
-      cursor: not-allowed;
-    }
-  }
+  flex-shrink: 0;
+  height: 220px;
 }
