--- a/src/pages/chat/components/MessageList/index.less
+++ b/src/pages/chat/components/MessageList/index.less
@@ -1,9 +1,16 @@
 .list {
   position: relative;
+  flex: 1;
   width: 100%;
-  height: 500px;
   padding: 10px;
-  overflow: auto;
+  overflow-y: scroll;
   background-color: #f5f5f5;
   border-bottom: 1px solid #eaeaea;
+}
+.loading {
+  text-align: center;
+}
+.nomore {
+  color: #666666;
+  text-align: center;
 }
