--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -10,13 +10,12 @@
     height: 700px;
     overflow: hidden;
     background-color: #fff;
-    & > .title {
+    & > .header {
       display: flex;
       flex-shrink: 0;
       justify-content: space-between;
       width: 100%;
       height: 60px;
-      padding: 0 10px;
       border-bottom: 1px solid #eaeaea;
     }
     & > .body {
