--- a/src/pages/chat/components/Header/index.less
+++ b/src/pages/chat/components/Header/index.less
@@ -17,3 +17,17 @@
     background-color: #eaeaea;
   }
 }
+.count {
+  margin: 0 3px;
+  color: #1890ff;
+  font-size: 16px;
+}
+.waitingUser {
+  display: flex;
+  justify-content: space-between;
+  & > span:first-child {
+  }
+  & > span:last-child {
+    color: #666666;
+  }
+}
