--- a/src/pages/chat/components/UserList/components/UserItem/index.less
+++ b/src/pages/chat/components/UserList/components/UserItem/index.less
@@ -4,7 +4,7 @@
   height: 70px;
   padding: 10px;
   &[data-active='true'] {
-    background-color: #f5f5f5;
+    background-color: #dedede;
   }
   & > .avatar {
     flex-shrink: 0;
