--- a/src/pages/chat/components/MessageList/index.less
+++ b/src/pages/chat/components/MessageList/index.less
@@ -5,7 +5,7 @@
   padding: 10px;
   overflow-y: scroll;
   background-color: #f5f5f5;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid #e0e0e0;
 }
 .loading {
   text-align: center;
