--- a/src/pages/chat/components/Menu/components/index.less
+++ b/src/pages/chat/components/Menu/components/index.less
@@ -1,9 +1,11 @@
 .item {
-  height: 40px;
+  height: 50px;
   font-size: 20px;
-  line-height: 40px;
+  line-height: 50px;
   text-align: center;
-  &:hover {
-    cursor: pointer;
+  span {
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
