--- a/src/pages/chat/components/UserList/components/UserItem/index.less
+++ b/src/pages/chat/components/UserList/components/UserItem/index.less
@@ -3,8 +3,12 @@
   width: 100%;
   height: 70px;
   padding: 10px;
+  border: 2px solid transparent;
   &[data-active='true'] {
     background-color: #dedede;
+  }
+  &[data-menu-visible='true'] {
+    border: 2px solid #03c160;
   }
   & > .avatar {
     flex-shrink: 0;
@@ -32,7 +36,8 @@
 
       & > .time {
         width: 100px;
-        color: #888;
+        color: #acacac;
+        font-size: 14px;
         text-align: right;
       }
     }
@@ -44,14 +49,8 @@
       color: #888;
       white-space: nowrap;
       text-overflow: ellipsis;
-
       & > .message {
         flex: 1;
-      }
-
-      & > .action {
-        width: 50px;
-        text-align: right;
       }
     }
   }
