--- a/src/pages/chat/components/Input/index.less
+++ b/src/pages/chat/components/Input/index.less
@@ -3,3 +3,13 @@
   flex-shrink: 0;
   height: 220px;
 }
+.disabled {
+  position: absolute;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  &:hover {
+    cursor: not-allowed;
+  }
+}
