--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -1,7 +1,9 @@
 .chat_container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100%;
   & > .chat {
     display: flex;
     height: 700px;
