--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100%;
+  background-color: #fafafa;
   & > .chat {
     display: flex;
     height: 700px;
