--- a/src/pages/chat/components/MessageList/components/Item/index.less
+++ b/src/pages/chat/components/MessageList/components/Item/index.less
@@ -26,6 +26,7 @@
     padding: 5px;
     font-size: 16px;
     line-height: 20px;
+    white-space: pre-wrap;
     word-break: break-all;
     border-radius: 3px;
     &[data-msg-type='text'] {
