--- a/src/pages/chat/components/MessageList/index.less
+++ b/src/pages/chat/components/MessageList/index.less
@@ -1,6 +1,8 @@
 .list {
   position: relative;
+  display: flex;
   flex: 1;
+  flex-direction: column-reverse;
   width: 100%;
   padding: 10px;
   overflow-y: scroll;
