--- a/src/pages/chat/components/UserList/components/UserItem/index.less
+++ b/src/pages/chat/components/UserList/components/UserItem/index.less
@@ -29,6 +29,9 @@
       & > .name {
         flex: 1;
         font-size: 18px;
+        &[data-online='true'] {
+          color: #1890ff;
+        }
       }
 
       & > .time {
