--- a/src/components/Upload/index.less
+++ b/src/components/Upload/index.less
@@ -1,3 +1,16 @@
+.content {
+  position: relative;
+}
+.delete {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  color: red;
+  font-size: 20px;
+  &:hover {
+    cursor: pointer;
+  }
+}
 .upload {
   display: flex;
   align-items: center;
