--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -5,13 +5,13 @@
   justify-content: center;
   min-height: 100%;
   background-color: #fafafa;
-  background-image: url('/background.png');
   background-size: 100% 100%;
   & > .chat {
     display: flex;
     height: 700px;
     overflow: hidden;
     border-radius: 5px;
+    box-shadow: 0 0 5px #999999;
     & > .left {
       flex-direction: column;
       align-items: center;
