--- a/src/pages/chat/components/UserList/components/UserItem/index.less
+++ b/src/pages/chat/components/UserList/components/UserItem/index.less
@@ -30,7 +30,7 @@
         flex: 1;
         font-size: 18px;
         &[data-online='true'] {
-          color: #1890ff;
+          color: #000000;
         }
       }
 
