新增取消接入功能

--- a/src/pages/chat/components/Menu/components/WaitingUser/index.less
+++ b/src/pages/chat/components/Menu/components/WaitingUser/index.less
@@ -7,3 +7,11 @@
 .messageContent {
   max-width: 100%;
 }
+.simpleMessage {
+  min-width: 200px;
+  max-width: 400px;
+  margin: -12px -16px;
+  .msg {
+    margin-left: 20px;
+  }
+}
