--- a/src/pages/chat/components/UserList/index.less
+++ b/src/pages/chat/components/UserList/index.less
@@ -2,6 +2,7 @@
   flex-shrink: 0;
   width: 300px;
   height: 100%;
+  overflow-y: auto;
   background-color: #f7f7f7;
   border-right: 1px solid #e0e0e0;
 }
