聊天主窗口可缩放大小

--- a/src/components/DraggableView/index.less
+++ b/src/components/DraggableView/index.less
@@ -25,6 +25,9 @@
     height: 30px;
     background-color: #f6f6f6;
     border-bottom: 1px solid #eaeaea;
+    &:hover {
+      cursor: move;
+    }
     & > div {
       flex: 1;
     }
