--- a/src/pages/chat/components/Menu/components/WaitingUser/index.less
+++ b/src/pages/chat/components/Menu/components/WaitingUser/index.less
@@ -11,7 +11,18 @@
   min-width: 200px;
   max-width: 400px;
   margin: -12px -16px;
-  .msg {
+}
+.msgItem {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  & > .time {
+    flex-shrink: 0;
+    width: 160px;
+    color: #666666;
+    font-size: 14px;
+  }
+  & > .content {
     margin-left: 20px;
   }
 }
