列表页增加Keepalive

--- a/src/components/DraggableView/index.less
+++ b/src/components/DraggableView/index.less
@@ -51,6 +51,7 @@
         background-color: #ff5e5e;
         border-radius: 12px;
         &:hover {
+          cursor: pointer;
           &:after {
             font-size: 10px;
             line-height: 12px;
