--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -1,14 +1,12 @@
 .chat_container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   min-height: 100%;
   overflow: hidden;
   background-color: #fafafa;
   background-size: 100% 100%;
   & > .chat {
     display: flex;
+    margin: auto;
     overflow: hidden;
     border-radius: 5px;
     box-shadow: 0 0 5px #999999;
