--- a/src/pages/chat/components/UserList/components/UserItem/index.less
+++ b/src/pages/chat/components/UserList/components/UserItem/index.less
@@ -1,11 +1,16 @@
 .item {
   display: flex;
   width: 100%;
-  height: 70px;
+  min-height: 70px;
   padding: 10px;
   border: 2px solid transparent;
   &[data-active='true'] {
     background-color: #dedede;
+  }
+  &[data-online='false'] {
+    > .avatar {
+      opacity: 0.4;
+    }
   }
   & > .avatar {
     flex-shrink: 0;
@@ -29,9 +34,6 @@
       & > .name {
         flex: 1;
         font-size: 18px;
-        &[data-online='true'] {
-          color: #000000;
-        }
       }
 
       & > .time {
